--- a/Server/package.json
+++ b/Server/package.json
@@ -9,6 +9,8 @@
   "author": "Melvin Devos",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1"
   }
 }
